@@ -8,6 +8,11 @@ Changes - Apache::Test change logfile
 
 =item 1.05-dev
 
+core scanning changes [Stas]
+- speedup by not chdir'ing into subdirs
+- an optional scanning of only t/ dir (used by TestSmoke)
+- don't scan on win32, since it has no core files
+
 in the autogenerated t/conf/modperl_inc.pl don't add the project/lib
 directory, unless a special env var APACHE_TEST_LIVE_DEV is true. This
 is because some projects change things in project/blib and pushing
